<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:layout_margin="10dp"
        android:inputType="text"
        android:text="@string/label_signin"
        android:fontFamily="@font/bangers"
        android:textColor="@color/white"
        android:textSize="35dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:gravity="center_horizontal" />


    <EditText
        android:id="@+id/enteremail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/bg" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="12dp"
        android:background="@drawable/edit_text_background"
        android:textColor="@color/black"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColorHint="@color/bg"
        android:id="@+id/enterpassword"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:layout_margin="10dp"
        android:background="@drawable/button_background"
        android:text="@string/btn_login"
        android:fontFamily="sans-serif-black"
        android:textSize="15sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Don't have an Account?"
            android:textAlignment="center"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/textViewRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Register"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/red"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/loginProgressBar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="gone"/>



</LinearLayout>